fix(): fix perfect scrollbar css issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -304,6 +304,10 @@ tr td span.table-code-asterisk {
   opacity: 0.9;
 }
 
+.ps__rail-y {
+  left: auto !important;
+}
+
 /*
  * Scrollbar thumb styles
  */
